# httomo

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  01_diad_pipeline_gpu.yaml  Dockerfile  LICENSE  MANIFEST.in  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  simple-cupy-script.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: httomo.base_block.doctree  httomo.block_interfaces.doctree  httomo.cli.doctree  httomo.cli_utils.doctree  httomo.common.doctree  httomo.cufft.doctree  httomo.cupy_utils.doctree  httomo.darks_flats.doctree  httomo.data.dataset_store.doctree  httomo.data.doctree  httomo.data.hdf.doctree  httomo.data.hdf.loaders.doctree  httomo.data.mpiutil.doctree  httomo.data.padding.doctree  httomo.data.param_sweep_store.doctree  httomo.doctree  httomo.globals.doctree  httomo.loaders.doctree  httomo.loaders.standard_tomo_loader.doctree  httomo.loaders.types.doctree  httomo.logger.doctree  httomo.method_wrappers.datareducer.doctree  httomo.method_wrappers.dezinging.doctree  httomo.method_wrappers.doctree  httomo.method_wrappers.generic.doctree  httomo.method_wrappers.images.doctree  httomo.method_wrappers.reconstruction.doctree  httomo.method_wrappers.rotation.doctree  httomo.method_wrappers.save_intermediate.doctree  httomo.method_wrappers.stats_calc.doctree  httomo.methods.doctree  httomo.methods_database.doctree  httomo.methods_database.packages.doctree  httomo.methods_database.packages.external.doctree  httomo.methods_database.packages.external.httomolib.1.2.doctree  httomo.methods_database.packages.external.httomolib.doctree  httomo.methods_database.packages.external.httomolibgpu.doctree  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.doctree  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.misc.corr.doctree  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.misc.doctree  (+78 more)
.doctrees/backends/: list.doctree  templates.doctree
.doctrees/developers/: api.doctree  how_to_contribute.doctree  memory_calculation.doctree  yaml_generator.doctree
.doctrees/explanation/: faq.doctree  process_list.doctree  templates.doctree
.doctrees/howto/: httomo_features.doctree  installation.doctree  (+3 more)
.github/: pull_request_template.md  release.yml
.scripts/: conda_upload.sh  my_secret.json.gpg
_modules/: index.html
_sources/: index.rst
_static/: documentation_options.js
api/: httomo.base_block.html  httomo.block_interfaces.html  httomo.cli.html  httomo.cli_utils.html  httomo.common.html  httomo.cufft.html  httomo.cupy_utils.html  httomo.darks_flats.html  httomo.data.dataset_store.html  httomo.data.hdf.html  httomo.data.hdf.loaders.html  httomo.data.html  httomo.data.mpiutil.html  httomo.data.padding.html  httomo.data.param_sweep_store.html  httomo.globals.html  httomo.html  httomo.loaders.html  httomo.loaders.standard_tomo_loader.html  httomo.loaders.types.html  httomo.logger.html  httomo.method_wrappers.datareducer.html  httomo.method_wrappers.dezinging.html  httomo.method_wrappers.generic.html  httomo.method_wrappers.html  httomo.method_wrappers.images.html  httomo.method_wrappers.reconstruction.html  httomo.method_wrappers.rotation.html  httomo.method_wrappers.save_intermediate.html  httomo.method_wrappers.stats_calc.html  httomo.methods.html  httomo.methods_database.html  httomo.methods_database.packages.external.html  httomo.methods_database.packages.external.httomolib.1.2.html  httomo.methods_database.packages.external.httomolib.html  httomo.methods_database.packages.external.httomolibgpu.html  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.html  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.misc.corr.html  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.misc.html  httomo.methods_database.packages.external.httomolibgpu.supporting_funcs.misc.morph.html  (+78 more)
backends/: list.html  templates.html
conda/: cuda-on-host.yml  environment-cil.yml  environment-cpu.yml  environment.yml  meta.yaml
developers/: api.html  how_to_contribute.html  memory_calculation.html  yaml_generator.html
doc/: sphinx-build.sh
docs/: index.html  sphinx-build.sh  sphinx_build_setup.rst
explanation/: faq.html  process_list.html  templates.html
howto/: httomo_features.html  installation.html  interpret_logger.html  process_lists_guide.html  run_httomo.html
httomo/: __init__.py  __main__.py  base_block.py  block_interfaces.py  cli.py  cli_utils.py  common.py  cufft.py  cupy_utils.py  darks_flats.py  dataset.py  globals.py  loader.py  logger.py  methods.py  methods_query.py  pipeline.py  pipeline_reader.py  platform_section.py  postrun.py  preprocess.py  prerun.py  preview.py  task_runner.py  transform_layer.py  transform_loader_params.py  types.py  ui_layer.py  utils.py  wrappers_class.py  yaml_checker.py  yaml_loader.py  yaml_templates_generator.py  yaml_utils.py
introduction/: about.html
pipelines/: yaml.html
reference/: loaders.html  templates.html  yaml.html
samples/: samples_info.txt
scripts/: synthdata_to_nexus.py  yaml_templates_generator.py
templates/: how_to_use_yaml_generator.md  yaml_templates_generator.py
test_pipeline_configs/: simple_pipeline.yaml  simple_tomopy_pipeline.yaml
tests/: conftest.py  test_base_block.py  test_chunk.py  test_cli.py  test_cli_utils.py  test_dataset.py  test_get_darks_flats.py  test_httomo.py  test_load.py  test_loader.py  test_method_query.py  test_methods.py  test_mpiutil.py  test_parallel_pipeline_big.py  test_pipeline.py  test_pipeline_big.py  test_pipeline_small.py  test_platform_section.py  test_preview.py  test_reclice.py  test_reslice.py  test_task_runner.py  test_transform_layer.py  test_transform_loader_params.py  test_ui_layer.py  test_utils.py  test_wrappers.py  test_yaml_checker.py  testing_utils.py
tutorials/: jn.html  yaml.html
utilities/: yaml_checker.html  yaml_generator.html
(+1094 files in other folders)
