[metadata]
name = httomo
description = High Throughput Tomography framework.
url = https://github.com/DiamondLightSource/HTTomo
author = Daniil Kazantsev, Jacob Williamson, Yousef Moazzam, Garry ODonnell
author_email = scientificsoftware@diamond.ac.uk
license = BSD 3-clause
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD 3-clause
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src
    
# Specify any package dependencies below.
install_requires =

[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
# [options.package_data]
# httomo =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    httomo = httomo.cli:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator
per-file-ignores =
    *pyi:E302

[pydocstyle]
convention = google
add-ignore =
    D100, # Ignore missing docstrings in public modules
    D104, # Ignore missing docstrings in public packages
    D418, # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv
    --cov=httomo --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    src tests

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
data_file = /tmp/httomo.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/